--- a/widget/templates/layouts/list-2.html
+++ b/widget/templates/layouts/list-2.html
@@ -62,7 +62,7 @@
                         <div class="date-row">
                             <p class="ellipsis margin-zero text-primary title"><a
                                     class="text-primary">{{item.data.title}}</a> </p>
-                            <div style="display: flex; flex-direction: row;">
+                            <div style="display: flex; flex-direction: row; align-items: center;">
                                 <svg data-ng-if="item.hasDownloadedMedia && WidgetHome.media.data.content.allowOfflineDownload "
                                     ng-click="WidgetHome.showDrawer($event, item)"    
                                     xmlns="http://www.w3.org/2000/svg" width="15" height="16" viewBox="0 0 15 16" fill="none">
@@ -95,7 +95,12 @@
                             <span class="list-item-date" data-ng-if="item.data.mediaDate">{{item.data.mediaDate | jsDate |
                                 date:"MMMM dd, yyyy"}}</span>
                             </span>
-                            <img ng-if="item.data.opened && WidgetHome.media.data.content.indicatePlayedItems" class="done-icon" src="assets/css/icons/ic_done_mark.svg" alt="done-mark">
+                            <svg ng-if="item.data.opened && WidgetHome.media.data.content.indicatePlayedItems" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+                                <g clip-path="url(#clip0_1115_4307)">
+                                    <path d="M0 0H18V18H0V0Z" fill="transparent" fill-opacity="0.6"/>
+                                    <path d="M6.75005 12.1502L3.60005 9.00019L2.55005 10.0502L6.75005 14.2502L15.75 5.2502L14.7 4.2002L6.75005 12.1502Z" fill="var(--bf-theme-success)"/>
+                                </g>
+                            </svg>
                         </div>
                         <!-- <div class="li-actions-item" style="bottom:5%;">
                             <i class="glyphicon bookmark star" style="top:unset !important; bottom:10%;"
