--- a/widget/templates/layouts/list-4.html
+++ b/widget/templates/layouts/list-4.html
@@ -98,7 +98,12 @@
                                 <span class="list-item-date"
                                     data-ng-if="WidgetHome.items[$index].data.mediaDate">{{WidgetHome.items[$index].data.mediaDate
                                     | jsDate | date:"MMMM dd, yyyy"}}</span>
-                                <img ng-if="WidgetHome.items[$index].data.opened && WidgetHome.media.data.content.indicatePlayedItems" class="done-icon" src="assets/css/icons/ic_done_mark.svg" alt="done-mark">
+                                    <svg ng-if="WidgetHome.items[$index].data.opened && WidgetHome.media.data.content.indicatePlayedItems" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+                                        <g clip-path="url(#clip0_1115_4307)">
+                                            <path d="M0 0H18V18H0V0Z" fill="transparent" fill-opacity="0.6"/>
+                                            <path d="M6.75005 12.1502L3.60005 9.00019L2.55005 10.0502L6.75005 14.2502L15.75 5.2502L14.7 4.2002L6.75005 12.1502Z" fill="var(--bf-theme-success)"/>
+                                        </g>
+                                    </svg>
                             </div>
                         </div>
                     </div>
@@ -150,7 +155,12 @@
                                 <span class="list-item-date"
                                     data-ng-if="WidgetHome.items[$index + 1].data.mediaDate">{{WidgetHome.items[$index +
                                     1].data.mediaDate | jsDate | date:"MMMM dd, yyyy"}}</span>
-                                <img ng-if="WidgetHome.items[$index + 1].data.opened && WidgetHome.media.data.content.indicatePlayedItems" class="done-icon" src="assets/css/icons/ic_done_mark.svg" alt="done-mark">
+                                <svg ng-if="WidgetHome.items[$index + 1].data.opened && WidgetHome.media.data.content.indicatePlayedItems" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+                                    <g clip-path="url(#clip0_1115_4307)">
+                                        <path d="M0 0H18V18H0V0Z" fill="transparent" fill-opacity="0.6"/>
+                                        <path d="M6.75005 12.1502L3.60005 9.00019L2.55005 10.0502L6.75005 14.2502L15.75 5.2502L14.7 4.2002L6.75005 12.1502Z" fill="var(--bf-theme-success)"/>
+                                    </g>
+                                </svg>
                             </div>
                         </div>
                     </div>
