--- a/widget/assets/css/media.css
+++ b/widget/assets/css/media.css
@@ -355,12 +355,13 @@ h5{
 
 .audio-plyer input[type=range]::-moz-range-track {
 	width: 100%;
-	height: 10px;
+	height: 6px;
 	cursor: pointer;
 	animate: 0.2s;
 	background: -webkit-gradient(linear, left top, right top, from(var(--bf-theme-primary)), color-stop(var(--bf-theme-primary)), color-stop(#fff), to(white));
     background: -o-linear-gradient(left, var(--bf-theme-primary) 0%, var(--bf-theme-primary) var(--played-tracker-percentage), #fff var(--played-tracker-percentage), white 100%);
     background: linear-gradient(to right, var(--bf-theme-primary) 0%, var(--bf-theme-primary) var(--played-tracker-percentage), #fff var(--played-tracker-percentage), white 100%);
+    border-radius: 12px;
 }
 
 .audio-plyer input[type=range]::-moz-range-thumb {
@@ -370,7 +371,8 @@ h5{
 	cursor: pointer;
 	-webkit-appearance: none;
 	margin-top: -5px;
-	border-radius: 10px;
+    border-radius: 10px;
+	border: none;
 }
 
 .audio-plyer input[type=range]::-ms-track {
