--- a/widget/assets/css/media.css
+++ b/widget/assets/css/media.css
@@ -3,8 +3,8 @@
 }
 
 /* Global Styles ////////////////////////////////////////////////////////////////////////////// */
-html{
-	font-size: 16px !important;
+html {
+    font-size: 16px !important;
 }
 
 .slide.safe-area {
@@ -12,19 +12,19 @@ html{
 }
 
 .caption {
-	font-size: .75rem;
-	line-height: 1.25rem;
-	opacity: .5;
+    font-size: 0.75rem;
+    line-height: 1.25rem;
+    opacity: 0.5;
 }
-.main-header{
-	box-shadow:0 2px 4px rgba(98, 98, 98, 0.3);
-	padding: 1rem;
+.main-header {
+    box-shadow: 0 2px 4px rgba(98, 98, 98, 0.3);
+    padding: 1rem;
 }
-h5{
-	font-size: 1rem !important;
+h5 {
+    font-size: 1rem !important;
     font-weight: bold;
 }
-.list-layout{
+.list-layout {
     padding: 1rem 0;
     padding-top: 0;
 }
@@ -34,64 +34,63 @@ h5{
     border-top: none !important ;
 }
 
-.list-item{
-	cursor: pointer;
+.list-item {
+    cursor: pointer;
 }
-.list-item:hover{
-	background-color: rgba(150,150,150,.05);
+.list-item:hover {
+    background-color: rgba(150, 150, 150, 0.05);
 }
 .btn-icon,
-.btn-icon.glyphicon{
-	top: auto;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	padding: 0;
-	width: 2.5rem;
-	height: 2.5rem;
-	border-radius: 50%;
-	border: 0;
-	background-color: transparent;
-	font-size: 1.125rem;
-	cursor: pointer;
+.btn-icon.glyphicon {
+    top: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: 50%;
+    border: 0;
+    background-color: transparent;
+    font-size: 1.125rem;
+    cursor: pointer;
 }
-.btn-icon.glyphicon::before{
-	position: relative;
-	top: 1px;
-	left: 1px;
+.btn-icon.glyphicon::before {
+    position: relative;
+    top: 1px;
+    left: 1px;
 }
-.btn-icon:hover{
-	background-color: rgba(150,150,150,.05);
+.btn-icon:hover {
+    background-color: rgba(150, 150, 150, 0.05);
 }
-.load-in{
-	transform: scale(.1);
-	opacity: 0;
-	animation: load-in .2s ease-in .5s forwards;
+.load-in {
+    transform: scale(0.1);
+    opacity: 0;
+    animation: load-in 0.2s ease-in 0.5s forwards;
 }
 @keyframes load-in {
-	0%{
-			transform: scale(.1);
-	}
-	100%{
-			transform: scale(1);
-			opacity: 1;
-	}
+    0% {
+        transform: scale(0.1);
+    }
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
 }
-.bottom.fixed-bottom.primaryBackgroundTheme{
-	padding-bottom: env(safe-area-inset-bottom);
+.bottom.fixed-bottom.primaryBackgroundTheme {
+    padding-bottom: env(safe-area-inset-bottom);
 }
 
-.word-break{
-	word-break: break-word;
+.word-break {
+    word-break: break-word;
 }
 .item-main-header {
     box-shadow: 0 2px 4px rgb(98 98 98 / 30%);
 }
 /* End Global Styles ////////////////////////////////////////////////////////////////////////////// */
 
-
 .audio-player {
-    overflow: hidden!important;
+    overflow: hidden !important;
     position: fixed;
     width: 100%;
     height: 100%;
@@ -133,7 +132,8 @@ h5{
     padding: 0;
 }
 
-.holder.now-playing .media-holder, .more-info .media-holder {
+.holder.now-playing .media-holder,
+.more-info .media-holder {
     display: table;
     text-align: center;
     width: 280px;
@@ -145,20 +145,20 @@ h5{
 }
 
 .third-layout .title-flex-box {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .third-layout .title-flex-box .li-actions-item .star {
-  position: relative;
-  line-height: 1;
-  margin-right: 0;
+    position: relative;
+    line-height: 1;
+    margin-right: 0;
 }
 
 .third-layout .title-flex-box .li-actions-item .share {
-  right: 10px;
-  top: 1px;
+    right: 10px;
+    top: 1px;
 }
 
 .third-layout.list-3 .title-flex-box .li-actions-item i {
@@ -166,44 +166,46 @@ h5{
 }
 
 .third-layout.list-3 .title-flex-box .action {
-  margin-left: 15px;
+    margin-left: 15px;
 }
 
 .third-layout.list-3 .title-flex-box .li-actions-item {
-  display: flex;
+    display: flex;
 }
 
-.third-layout.list-3 .list-item-media{
+.third-layout.list-3 .list-item-media {
     display: flex;
     align-items: center;
     overflow: hidden;
 }
-.third-layout.list-3 .list-item-media .list-media-holder{
+.third-layout.list-3 .list-item-media .list-media-holder {
     flex-shrink: 0;
 }
-.third-layout.list-3 .list-item-media .li-actions-item{
+.third-layout.list-3 .list-item-media .li-actions-item {
     position: relative;
 }
-.third-layout.list-3 .list-item-media .list-media-holder .li-actions-item{
+.third-layout.list-3 .list-item-media .list-media-holder .li-actions-item {
     position: absolute;
 }
-.third-layout.list-3 .li-actions-item .star{
+.third-layout.list-3 .li-actions-item .star {
     margin-right: 0;
-    padding: .25rem !important;
+    padding: 0.25rem !important;
 }
-.third-layout.list-3 .list-layout .list-item-media .list-media-holder{
-    margin: .25rem;
+.third-layout.list-3 .list-layout .list-item-media .list-media-holder {
+    margin: 0.25rem;
     margin-right: 0;
 }
 
-@media (max-height: 600px) { 
-    .holder.now-playing .media-holder, .holder.now-playing .media-holder .media-inner img {
+@media (max-height: 600px) {
+    .holder.now-playing .media-holder,
+    .holder.now-playing .media-holder .media-inner img {
         max-height: 120px;
         max-width: 120px;
     }
 }
 
-.holder.now-playing .media-holder .media-inner, .more-info .media-holder .media-inner {
+.holder.now-playing .media-holder .media-inner,
+.more-info .media-holder .media-inner {
     display: table;
     vertical-align: middle;
 }
@@ -215,10 +217,11 @@ h5{
     width: 280px;
     height: 280px;
     object-fit: cover;
-    box-shadow: 0 0 16px rgba(0,0,0,.5);
+    box-shadow: 0 0 16px rgba(0, 0, 0, 0.5);
 }
 
-.btn.btn-icon, .holder.now-playing .media-player-info {
+.btn.btn-icon,
+.holder.now-playing .media-player-info {
     padding: 24px 0 4px;
     justify-content: center;
 }
@@ -228,19 +231,25 @@ h5{
     justify-content: space-between;
 }
 
-.holder.now-playing .media-player-info, .media-header-link, .media-player-btns, .slider {
+.holder.now-playing .media-player-info,
+.media-header-link,
+.media-player-btns,
+.slider {
     width: 100%;
     max-width: 600px;
     margin: 0 auto;
 }
 
-.holder.now-playing .media-player-info, .media-player-btns {
+.holder.now-playing .media-player-info,
+.media-player-btns {
     flex-shrink: 0;
     display: flex;
     align-items: center;
 }
 
-.holder.now-playing .media-player-action-btns span, .holder.now-playing .media-player-btns span, .holder.now-playing .media-player-info span {
+.holder.now-playing .media-player-action-btns span,
+.holder.now-playing .media-player-btns span,
+.holder.now-playing .media-player-info span {
     font-size: 18px;
     display: flex;
     align-items: center;
@@ -256,13 +265,12 @@ h5{
     height: 64px;
 }
 
-.holder.now-playing .media-player-btns .active{
-	fill: var(--bf-theme-primary);
+.holder.now-playing .media-player-btns .active {
+    fill: var(--bf-theme-primary);
 }
-.holder.now-playing .media-player-btns .not-active{
-	fill: #FFF;
+.holder.now-playing .media-player-btns .not-active {
+    fill: #fff;
 }
-
 
 .btn.btn-icon {
     background-color: transparent;
@@ -289,11 +297,10 @@ h5{
     padding: 0 4px;
 }
 
-
 @media (max-height: 600px) {
-.holder.now-playing .media-player-btns .icon.icon-sm {
-    top: -5px;
-}
+    .holder.now-playing .media-player-btns .icon.icon-sm {
+        top: -5px;
+    }
 }
 
 .holder.now-playing .media-player-btns .icon.icon-sm {
@@ -303,9 +310,9 @@ h5{
 }
 
 @media (max-height: 600px) {
-.holder.now-playing .media-player-btns .icon {
-    font-size: 32px;
-}
+    .holder.now-playing .media-player-btns .icon {
+        font-size: 32px;
+    }
 }
 
 .holder.now-playing .media-player-btns span {
@@ -317,118 +324,158 @@ h5{
     align-items: center;
 }
 
-.audio-plyer input[type=range] {
-	-webkit-appearance: none;
-	height: 32px;
+.audio-plyer input[type='range'] {
+    -webkit-appearance: none;
+    height: 32px;
     width: 100%;
     background: unset;
     position: relative;
 }
 
-.audio-plyer input[type=range]:focus {
-	outline: none;
+.audio-plyer input[type='range']:focus {
+    outline: none;
 }
 
-.audio-plyer input[type=range]::-webkit-slider-runnable-track {
+.audio-plyer input[type='range']::-webkit-slider-runnable-track {
     width: 100%;
     height: 6px;
     cursor: pointer;
     border-radius: 12px;
     animate: 0.2s;
-    background: -webkit-gradient(linear, left top, right top, from(var(--bf-theme-primary)), color-stop(var(--bf-theme-primary)), color-stop(#fff), to(white));
-    background: -o-linear-gradient(left, var(--bf-theme-primary) 0%, var(--bf-theme-primary) var(--played-tracker-percentage), #fff var(--played-tracker-percentage), white 100%);
-    background: linear-gradient(to right, var(--bf-theme-primary) 0%, var(--bf-theme-primary) var(--played-tracker-percentage), #fff var(--played-tracker-percentage), white 100%);
+    background: -webkit-gradient(
+        linear,
+        left top,
+        right top,
+        from(var(--bf-theme-primary)),
+        color-stop(var(--bf-theme-primary)),
+        color-stop(#fff),
+        to(white)
+    );
+    background: -o-linear-gradient(
+        left,
+        var(--bf-theme-primary) 0%,
+        var(--bf-theme-primary) var(--played-tracker-percentage),
+        #fff var(--played-tracker-percentage),
+        white 100%
+    );
+    background: linear-gradient(
+        to right,
+        var(--bf-theme-primary) 0%,
+        var(--bf-theme-primary) var(--played-tracker-percentage),
+        #fff var(--played-tracker-percentage),
+        white 100%
+    );
 }
 
-.audio-plyer input[type=range]::-webkit-slider-thumb {
+.audio-plyer input[type='range']::-webkit-slider-thumb {
     width: 20px;
     height: 20px;
     border-radius: 50%;
-	cursor: pointer;
+    cursor: pointer;
     -webkit-appearance: none;
     background: var(--bf-theme-primary);
 }
 
-.audio-plyer input[type=range]:focus::-webkit-slider-runnable-track {
-	/*background: #367ebd;*/
+.audio-plyer input[type='range']:focus::-webkit-slider-runnable-track {
+    /*background: #367ebd;*/
 }
 
-.audio-plyer input[type=range]::-moz-range-track {
-	width: 100%;
-	height: 6px;
-	cursor: pointer;
-	animate: 0.2s;
-	background: -webkit-gradient(linear, left top, right top, from(var(--bf-theme-primary)), color-stop(var(--bf-theme-primary)), color-stop(#fff), to(white));
-    background: -o-linear-gradient(left, var(--bf-theme-primary) 0%, var(--bf-theme-primary) var(--played-tracker-percentage), #fff var(--played-tracker-percentage), white 100%);
-    background: linear-gradient(to right, var(--bf-theme-primary) 0%, var(--bf-theme-primary) var(--played-tracker-percentage), #fff var(--played-tracker-percentage), white 100%);
+.audio-plyer input[type='range']::-moz-range-track {
+    width: 100%;
+    height: 6px;
+    cursor: pointer;
+    animate: 0.2s;
+    background: -webkit-gradient(
+        linear,
+        left top,
+        right top,
+        from(var(--bf-theme-primary)),
+        color-stop(var(--bf-theme-primary)),
+        color-stop(#fff),
+        to(white)
+    );
+    background: -o-linear-gradient(
+        left,
+        var(--bf-theme-primary) 0%,
+        var(--bf-theme-primary) var(--played-tracker-percentage),
+        #fff var(--played-tracker-percentage),
+        white 100%
+    );
+    background: linear-gradient(
+        to right,
+        var(--bf-theme-primary) 0%,
+        var(--bf-theme-primary) var(--played-tracker-percentage),
+        #fff var(--played-tracker-percentage),
+        white 100%
+    );
     border-radius: 12px;
 }
 
-.audio-plyer input[type=range]::-moz-range-thumb {
-	height: 20px;
-	width: 20px;
-	background: var(--bf-theme-primary);
-	cursor: pointer;
-	-webkit-appearance: none;
-	margin-top: -5px;
+.audio-plyer input[type='range']::-moz-range-thumb {
+    height: 20px;
+    width: 20px;
+    background: var(--bf-theme-primary);
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -5px;
     border-radius: 10px;
-	border: none;
+    border: none;
 }
 
-.audio-plyer input[type=range]::-ms-track {
-	width: 100%;
-	height: 8.4px;
-	cursor: pointer;
-	animate: 0.2s;
-	background: transparent;
-	border-color: transparent;
-	border-width: 16px 0;
-	color: transparent;
+.audio-plyer input[type='range']::-ms-track {
+    width: 100%;
+    height: 8.4px;
+    cursor: pointer;
+    animate: 0.2s;
+    background: transparent;
+    border-color: transparent;
+    border-width: 16px 0;
+    color: transparent;
 }
 
-.audio-plyer input[type=range]::-ms-fill-lower {
-	background: #2a6495;
-	border: 0.2px solid #010101;
-	border-radius: 2.6px;
-	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+.audio-plyer input[type='range']::-ms-fill-lower {
+    background: #2a6495;
+    border: 0.2px solid #010101;
+    border-radius: 2.6px;
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
 }
 
-.audio-plyer input[type=range]::-ms-fill-upper {
-	background: #3071a9;
-	border: 0.2px solid #010101;
-	border-radius: 2.6px;
-	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+.audio-plyer input[type='range']::-ms-fill-upper {
+    background: #3071a9;
+    border: 0.2px solid #010101;
+    border-radius: 2.6px;
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
 }
 
-.audio-plyer input[type=range]::-ms-thumb {
-	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-	border: 1px solid #000000;
-	height: 36px;
-	width: 16px;
-	border-radius: 3px;
-	background: #ffffff;
-	cursor: pointer;
+.audio-plyer input[type='range']::-ms-thumb {
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+    border: 1px solid #000000;
+    height: 36px;
+    width: 16px;
+    border-radius: 3px;
+    background: #ffffff;
+    cursor: pointer;
 }
 
-.audio-plyer input[type=range]:focus::-ms-fill-lower {
-	background: #3071a9;
+.audio-plyer input[type='range']:focus::-ms-fill-lower {
+    background: #3071a9;
 }
 
-.audio-player input[type=range]:focus::-ms-fill-upper {
-	background: #367ebd;
+.audio-player input[type='range']:focus::-ms-fill-upper {
+    background: #367ebd;
 }
 /* End of audio player style*/
-.slider{
-	width: 100%;
-	max-width: 600px;
-	margin: 0 auto;
-	padding: 0 4px;
+.slider {
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 0 4px;
 }
-.slider .time-indicator span{
-	font-size: 12px;
-	color: #fff;
-	opacity: .7;
-	margin: 0 6px;
+.slider .time-indicator span {
+    font-size: 12px;
+    color: #fff;
+    opacity: 0.7;
+    margin: 0 6px;
 }
 
 @media (max-height: 600px) {
@@ -445,7 +492,7 @@ button.btn-icon.btn-lg {
     width: 64px;
     height: 64px;
     padding: 0;
-    box-shadow: 0 4px 16px rgba(0,0,0,.5);
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.5);
 }
 
 .holder.now-playing .media-player-action-btns {
@@ -457,21 +504,22 @@ button.btn-icon.btn-lg {
 }
 
 .holder.now-playing .media-player-action-btns span {
-    opacity: .5;
+    opacity: 0.5;
 }
 
-.whiteTheme, .whiteTheme:hover, .whiteTheme:focus {
+.whiteTheme,
+.whiteTheme:hover,
+.whiteTheme:focus {
     color: #fff !important;
 }
 
-@media (max-height: 600px)
-{
-    .holder.now-playing .media-holder, .holder.now-playing .media-holder .media-inner img {
+@media (max-height: 600px) {
+    .holder.now-playing .media-holder,
+    .holder.now-playing .media-holder .media-inner img {
         max-height: 120px;
         max-width: 120px;
     }
 }
-
 
 #countdownOverlay {
     height: 0;
@@ -480,14 +528,14 @@ button.btn-icon.btn-lg {
     z-index: 1;
     left: 0;
     bottom: 0;
-    background-color: rgba(0,0,0, 0.8);
+    background-color: rgba(0, 0, 0, 0.8);
     overflow-x: hidden;
     transition: 0.2s;
-    border-top-left-radius: 8% ;
+    border-top-left-radius: 8%;
     border-top-right-radius: 8%;
 }
-  
-#countdownOverlay  .overlay-content {
+
+#countdownOverlay .overlay-content {
     position: relative;
     top: 25%;
     width: 100%;
@@ -497,7 +545,7 @@ button.btn-icon.btn-lg {
 }
 
 #countdownOverlay .overlay-content h5,
-#countdownOverlay  .overlay-content button  {
+#countdownOverlay .overlay-content button {
     font-size: 18px !important;
     color: white !important;
 }
@@ -524,7 +572,7 @@ button.btn-icon.btn-lg {
 }
 
 #videogularElement vg-mute-button {
-    width: 32px !important; 
+    width: 32px !important;
 }
 
 #videogularElement .iconButton {
@@ -546,7 +594,8 @@ button.btn-icon.btn-lg {
     position: fixed !important;
 }
 
-videogular .iconButton, [videogular] .iconButton,
+videogular .iconButton,
+[videogular] .iconButton,
 #videogularElement .next-item-btn .iconButton {
     padding: 6px 4px !important;
 }
@@ -611,7 +660,7 @@ videogular .iconButton, [videogular] .iconButton,
     filter: blur(5px);
     z-index: -1;
     width: 100% !important;
-    position: absolute; 
+    position: absolute;
     top: 0;
     left: 0;
 }
