Fix: fix bugs & enhancments

--- a/control/settings/templates/home.html
+++ b/control/settings/templates/home.html
@@ -65,7 +65,7 @@
     </div>
 </div>
 
-<div class="setting-toggle margin-bottom-twenty" ng-show="Settings.data.content.autoPlay">
+<div class="setting-toggle margin-bottom-twenty" ng-show="Settings.data.content.autoPlay" style="margin-left: 20px;">
     <p class="setting-label">
         Auto Play Delay
         <span class="customTooltipBox btn-primary">
@@ -105,7 +105,7 @@
     </div>
 </div>
 
-<div class="setting-toggle margin-bottom-twenty" ng-if="Settings.data.content.globalPlaylist">
+<div class="setting-toggle margin-bottom-twenty" ng-if="Settings.data.content.globalPlaylist" style="margin-left: 20px;">
     <p class="setting-label">
         Global Playlist Feature
         <span class="customTooltipBox btn-primary">
