--- a/widget/templates/layouts/list-2.html
+++ b/widget/templates/layouts/list-2.html
@@ -58,11 +58,11 @@
                     </div>
 
                     <div class="list-item-copy text-left padding-left-ten padding-right-ten text-overlay"
-                        style=" width:100%;padding-right: 30px !important;">
+                        style=" width:100%;">
                         <div class="date-row">
                             <p class="ellipsis margin-zero text-primary title"><a
                                     class="text-primary">{{item.data.title}}</a> </p>
-                            <div style="display: flex; flex-direction: row; align-items: center;">
+                            <div style="display: flex; flex-direction: row; align-items: center;" class="icon-container">
                                 <svg data-ng-if="item.hasDownloadedMedia && WidgetHome.media.data.content.allowOfflineDownload "
                                     ng-click="WidgetHome.showDrawer($event, item)"    
                                     xmlns="http://www.w3.org/2000/svg" width="15" height="16" viewBox="0 0 15 16" fill="none">
@@ -85,7 +85,9 @@
 
 
                         <p data-ng-if="item.data.summary" id="summary" class="summary ellipsis margin-zero">{{item.data.summary}}</p>
-                        <p id="views" ng-if="WidgetHome.media.data.content.showViewCount" class="ellipsis margin-zero">{{item.data.count ? item.data.count : 0}}
+                        <p id="views" ng-if="WidgetHome.media.data.content.showViewCount" 
+                        ng-class="{'no-summary': !item.data.summary}"
+                        class="ellipsis margin-zero">{{item.data.count ? item.data.count : 0}}
                             <span id="iconView" style="float: left;margin-right: 5px;">
                                 <i class="glyphicon glyphicon-eye-open"></i>
                             </span>
