--- a/widget/templates/layouts/list-4.html
+++ b/widget/templates/layouts/list-4.html
@@ -63,7 +63,8 @@
                                 play-btn="{{WidgetHome.items[$index].data.videoUrl.length > 0 || WidgetHome.items[$index].data.audioUrl.length > 0 }}">
                                 <img ng-if="WidgetHome.items[$index].data.topImage" load-image="1x1" crop-width="200"
                                     crop-height="200" crop-type="crop"
-                                    data-final-src="{{WidgetHome.items[$index].data.topImage | resizeImage : 200:200}}">
+                                    data-final-src="{{WidgetHome.items[$index].data.topImage | resizeImage : 200:200}}"
+                                    style="width: 200px;">
                                 <img ng-if="!WidgetHome.items[$index].data.topImage"
                                     src="../../../styles/media/holder-1x1.png">
                             </div>
@@ -120,7 +121,8 @@
                                 play-btn="{{WidgetHome.items[$index+1].data.videoUrl.length > 0 || WidgetHome.items[$index+1].data.audioUrl.length > 0 }}">
                                 <img ng-if="WidgetHome.items[$index + 1].data.topImage" load-image="1x1"
                                     crop-width="200" crop-height="200" crop-type="crop"
-                                    data-final-src="{{WidgetHome.items[$index + 1].data.topImage | resizeImage : 200:200}}">
+                                    data-final-src="{{WidgetHome.items[$index + 1].data.topImage | resizeImage : 200:200}}"
+                                    style="width: 200px;">
                                 <img ng-if="!WidgetHome.items[$index + 1].data.topImage"
                                     src="../../../styles/media/holder-1x1.png">
                             </div>
