--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -97,7 +97,7 @@
     <h1>Item Content Details</h1>
     <div class="row flex">
         <div class="col-md-3">
-            <span>Top Image</span>
+            <span>Thumbnail Image</span>
         </div>
         <div class="col-md-9 main ">
             <div class="screens clearfix margin-bottom-five">
