--- a/widget/assets/css/media.css
+++ b/widget/assets/css/media.css
@@ -196,13 +196,7 @@ h5 {
     margin-right: 0;
 }
 
-@media (max-height: 600px) {
-    .holder.now-playing .media-holder,
-    .holder.now-playing .media-holder .media-inner img {
-        max-height: 120px;
-        max-width: 120px;
-    }
-}
+
 
 .holder.now-playing .media-holder .media-inner,
 .more-info .media-holder .media-inner {
@@ -259,6 +253,14 @@ h5 {
     border-radius: 50%;
     height: 48px;
     cursor: pointer;
+}
+.holder.now-playing .media-player-action-btns span.playback-speed {
+    font-size: 16px;
+    padding-top: 5px;
+    font-weight: 500;
+}
+.holder.now-playing .media-player-action-btns img.playList-icon{
+    filter: drop-shadow(0px 0px 0 #fff) !important;
 }
 .holder.now-playing .media-player-btns span {
     width: 64px;
@@ -518,8 +520,14 @@ button.btn-icon.btn-lg {
 @media (max-height: 600px) {
     .holder.now-playing .media-holder,
     .holder.now-playing .media-holder .media-inner img {
-        max-height: 120px;
-        max-width: 120px;
+        max-height: 230px;
+        max-width: 230px;
+    }
+    .btn.btn-icon, .holder.now-playing .media-player-info{
+        padding: 4px 0;
+    }
+    .media-player-btns{
+        padding: 8px 0;
     }
 }
 
