--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -1,6 +1,6 @@
 <div class="holder now-playing text-center audio-player">
     <div id="playerBackgroundImage"
-    ng-style="{'background-image': 'url(' + NowPlaying.currentTrack.backgroundImage + ')'}"
+    ng-style="{'background-image': 'url(' + NowPlaying.cropImage(NowPlaying.currentTrack.backgroundImage) + ')'}"
     class="now-playing-backgroundImage"></div>
     <div class="media-center-plugin" ng-if="!(NowPlaying.openMoreInfo || NowPlaying.openSettings)">
         <div class="media-holder">
@@ -64,7 +64,7 @@
             <span class="icon " ng-click="NowPlaying.shufflePlaylist()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                     <g opacity="0.9" clip-path="url(#clip0_1431_2874)">
-                        <path d="M10.59 9.17L5.41 4L4 5.41L9.17 10.58L10.59 9.17ZM14.5 4L16.54 6.04L4 18.59L5.41 20L17.96 7.46L20 9.5V4H14.5ZM14.83 13.41L13.42 14.82L16.55 17.95L14.5 20H20V14.5L17.96 16.54L14.83 13.41Z" 
+                        <path d="M10.59 9.17L5.41 4L4 5.41L9.17 10.58L10.59 9.17ZM14.5 4L16.54 6.04L4 18.59L5.41 20L17.96 7.46L20 9.5V4H14.5ZM14.83 13.41L13.42 14.82L16.55 17.95L14.5 20H20V14.5L17.96 16.54L14.83 13.41Z"
                         ng-class="(NowPlaying.settings && NowPlaying.settings.shufflePlaylist) ? 'active' : 'not-active'"/>
                     </g>
                     <defs>
@@ -74,7 +74,7 @@
                     </defs>
                 </svg>
             </span>
-                
+            
             <div class="player-btns">
                 <span ng-if="!autoPlay" class="btn btn-icon" ng-click="NowPlaying.backward()"><img
                         src="assets/css/icons/ic_fast_rewind.svg" alt=""></span>
@@ -96,7 +96,7 @@
             <span class="icon icon-sm" ng-click="NowPlaying.loopPlaylist()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                     <g opacity="0.9" clip-path="url(#clip0_1431_2881)">
-                        <path d="M7 7H17V10L21 6L17 2V5H5V11H7V7ZM17 17H7V14L3 18L7 22V19H19V13H17V17Z" 
+                        <path d="M7 7H17V10L21 6L17 2V5H5V11H7V7ZM17 17H7V14L3 18L7 22V19H19V13H17V17Z"
                         ng-class="(NowPlaying.settings && NowPlaying.settings.loopPlaylist) ? 'active' : 'not-active'">
                     </g>
                     <defs>
