--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -1,6 +1,6 @@
 <div class="holder now-playing text-center audio-player">
     <div id="playerBackgroundImage"
-    ng-style="{'background-image': 'url(' + NowPlaying.cropImage(NowPlaying.currentTrack.backgroundImage) + ')'}"
+    ng-style="{'background-image': 'url(' + NowPlaying.currentTrack.backgroundImage + ')'}"
     class="now-playing-backgroundImage"></div>
     <div class="media-center-plugin" ng-if="!(NowPlaying.openMoreInfo || NowPlaying.openSettings)">
         <div class="media-holder">
