--- a/widget/assets/css/media.css
+++ b/widget/assets/css/media.css
@@ -240,6 +240,23 @@ h5 {
     display: flex;
     align-items: center;
 }
+.holder.now-playing .media-player-btns .icon .shuffle-indicator {
+    width: 12px;
+    height: 12px;
+    background: hsl(0deg 0% 100% / 70%);
+    border-radius: 100%;
+    font-size: 10px;
+    font-weight: 700;
+    color: var(--bf-theme-primary);
+}
+
+.holder.now-playing .media-player-btns .icon .shuffle-indicator .shuffle-indicator-text {
+    font-size: 10px;
+    width: 100%;
+    height: 100%;
+    font-weight: 700;
+    color: var(--bf-theme-primary);
+}
 
 .holder.now-playing .media-player-action-btns span,
 .holder.now-playing .media-player-btns span,
