--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -26,7 +26,6 @@
         <div class="slider">
             <div>
                 <div>
-                    <!-- TODO: this needs to be disabled when the user is playing another audio -->
                     <div class="audio-plyer"><input type="range" min="0.0" max="{{NowPlaying.duration}}"
                         ng-model="NowPlaying.currentTime" ng-change="NowPlaying.changeTime(NowPlaying.currentTime)" />
                     </div>
@@ -51,7 +50,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                     <g opacity="0.9" clip-path="url(#clip0_1431_2874)">
                         <path d="M10.59 9.17L5.41 4L4 5.41L9.17 10.58L10.59 9.17ZM14.5 4L16.54 6.04L4 18.59L5.41 20L17.96 7.46L20 9.5V4H14.5ZM14.83 13.41L13.42 14.82L16.55 17.95L14.5 20H20V14.5L17.96 16.54L14.83 13.41Z" 
-                        ng-class="(NowPlaying.settings && NowPlaying.settings.shufflePlaylist) ? 'active' : 'not-active'"/>
+                        ng-class="(NowPlaying.settings && (NowPlaying.settings.shufflePlaylist || NowPlaying.settings.shufflePluginList)) ? 'active' : 'not-active'"/>
                     </g>
                     <defs>
                         <clipPath id="clip0_1431_2874">
@@ -59,6 +58,14 @@
                         </clipPath>
                     </defs>
                 </svg>
+                <!-- 
+                    TODO: 
+                    When Auto-Add All Audio to Playlist is On, the played items are from the playlist, and shuffling is made for the playlist items.
+                    When “Continuous Playback” is On, shuffling is made for the plugin items. Unless the user plays an item from the playlist items, in this case, shuffling is switched to the playlist.
+                -->
+                <span class="shuffle-indicator" ng-if="(NowPlaying.settings && (NowPlaying.settings.shufflePlaylist || NowPlaying.settings.shufflePluginList))">
+                    <span class="shuffle-indicator-text">P</span>
+                </span>
             </span>
                 
             <div class="player-btns">
@@ -226,13 +233,18 @@
                             </div>
                         </div>
                     </div>
-                    <div class="item clearfix row" ng-if="!NowPlaying.forceAutoPlay">
+                    <div class="item clearfix row">
                         <div class="col-md-10 pull-left text-left" >
                             <span class="ellipsis whiteTheme">{{NowPlaying.settingsStrings.shufflePlaylist}}</span>
                         </div>
                         <div class="col-md-2 pull-right text-right">
-                            <div class="checkbox checkbox-primary checked no-label margin-zero">
+                            <div ng-if="audioFromPlayList!==null && audioFromPlayList!==undefined" class="checkbox checkbox-primary checked no-label margin-zero">
                                 <input type="checkbox" id="playfromLast" ng-model="NowPlaying.settings.shufflePlaylist"
+                                    ng-change="NowPlaying.setSettings(NowPlaying.settings)">
+                                <label for="playfromLast"></label>
+                            </div>
+                            <div ng-if="audioFromPlayList===null || audioFromPlayList===undefined" class="checkbox checkbox-primary checked no-label margin-zero">
+                                <input type="checkbox" id="playfromLast" ng-model="NowPlaying.settings.shufflePluginList"
                                     ng-change="NowPlaying.setSettings(NowPlaying.settings)">
                                 <label for="playfromLast"></label>
                             </div>
